erDiagram
    HOTEL {
        bigint id PK
        string name
        int stars
        string ville
        decimal taxe_sejour
        decimal agency_ratio
        decimal group_ratio
    }

    TYPE {
        bigint id PK
        string nom
        string description
        string color
    }

    SUB_TYPE {
        bigint id PK
        bigint id_type FK
        string nom
        int max_adults
        int max_children
        int capacity_total
    }

    CHAMBRE {
        bigint id PK
        string numero
        bigint id_hotel FK
        bigint id_type FK
        bigint id_sub_type FK
    }

    TARIF {
        bigint id PK
        bigint id_hotel FK
        bigint id_type FK
        bigint id_sub_type FK
        decimal prix
        date date_debut
        date date_fin
    }

    RESERVATION {
        bigint id PK
        bigint id_hotel FK
        string nom_contact
        string email
        string telephone
        string statut
        string code_reference
        string token
        decimal total_amount
        decimal paid_amount
    }

    RESERVATION_GROUP {
        bigint id PK
        bigint id_reservation FK
        date date_arrivee
        date date_depart
        int nb_personnes
    }

    ITEM_RESERVATION {
        bigint id PK
        bigint id_group FK
        bigint id_type FK
        bigint id_sub_type FK
        int quantite
        decimal prix_unitaire
        int nb_adultes
        int nb_enfants
    }

    PAYMENT_VERIFICATION {
        bigint id PK
        bigint id_reservation FK
        string document_path
        decimal amount
        string statut
    }

    DISCOUNT_RULE {
        bigint id PK
        bigint id_hotel FK
        int min_nights
        decimal discount_percentage
    }

    HOTEL_TYPE_TARIFICATION {
        bigint id PK
        bigint id_hotel FK
        bigint id_type FK
    }

    HOTEL ||--o{ CHAMBRE : possede
    HOTEL ||--o{ TARIF : applique
    HOTEL ||--o{ RESERVATION : recoit
    HOTEL ||--o{ DISCOUNT_RULE : definit
    HOTEL ||--o{ HOTEL_TYPE_TARIFICATION : associe

    TYPE ||--o{ SUB_TYPE : decliner
    TYPE ||--o{ CHAMBRE : categorise
    TYPE ||--o{ TARIF : tarifie
    TYPE ||--o{ ITEM_RESERVATION : reference
    TYPE ||--o{ HOTEL_TYPE_TARIFICATION : associe

    SUB_TYPE ||--o{ CHAMBRE : specialise
    SUB_TYPE ||--o{ TARIF : tarifie
    SUB_TYPE ||--o{ ITEM_RESERVATION : detaille

    RESERVATION ||--|{ RESERVATION_GROUP : segmente
    RESERVATION_GROUP ||--|{ ITEM_RESERVATION : contient
    RESERVATION ||--o{ PAYMENT_VERIFICATION : regle
